# forge-alloc

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  deny.toml
.github/workflows/: ci.yml  codspeed.yml
crates/forge-alloc/: Cargo.toml  README.md
crates/forge-alloc-capi/: Cargo.toml  README.md
crates/forge-alloc-capi/examples/: bump_example.c  bump_example.cpp
crates/forge-alloc-capi/include/: forge_alloc.h
crates/forge-alloc-capi/src/: lib.rs
crates/forge-alloc-capi/tests/: ffi.rs
crates/forge-alloc-core/: Cargo.toml
crates/forge-alloc-core/src/: cache_padded.rs  lib.rs  testing.rs
crates/forge-alloc-core/src/traits/: alloc_fault_policy.rs  allocator.rs  fixed_range.rs  freelist_protection.rs  mod.rs  non_zero_layout.rs
crates/forge-alloc-core/tests/: no_std_compile.rs
crates/forge-alloc/examples/: auth_service.rs  cli_batch.rs  db_executor.rs  embedded_firmware.rs  game_frame.rs  web_service.rs
crates/forge-alloc/src/: cache_padded.rs  lib.rs
crates/forge-alloc/src/backing/: heap.rs  huge_page_backed.rs  inline.rs  locked_mmap.rs  mmap.rs  mod.rs  static_buf.rs  system.rs
crates/forge-alloc/src/hardening/: cache_jitter.rs  canary.rs  faulty.rs  guard_page.rs  huge_page.rs  mod.rs  numa.rs  poison.rs  quarantine.rs  split_metadata.rs  statistics.rs  watermark.rs  zeroize.rs
crates/forge-alloc/src/layout/: arena_pool.rs  bump.rs  extendable_slab.rs  fallback.rs  generational.rs  mod.rs  shared_bump.rs  size_classed.rs  slab.rs  slab_owner.rs  stack_alloc.rs
crates/forge-alloc/tests/: composition_examples.rs  conformance.rs  crypto_slab_e2e.rs  hardened_slab_e2e.rs  layering.rs  loom_concurrency.rs  miri_targets.rs  no_std_compile.rs  nrvo_defeat.rs  proptest_correctness.rs  proptest_corruption.rs  proptest_inline_backed.proptest-regressions  proptest_inline_backed.rs
crates/forge-backing/: Cargo.toml
crates/forge-backing/src/: inline.rs  lib.rs  mmap.rs  system.rs
crates/forge-bench/: Cargo.toml
crates/forge-bench/benches/: adaptive_batch.rs  alloc_throughput.rs  composition_tradeoffs.rs  contention.rs  typed_alloc.rs
crates/forge-bench/src/: lib.rs
crates/forge-containers/: CHANGELOG.md  Cargo.toml  README.md
crates/forge-containers/src/: aligned_col.rs  lib.rs
crates/forge-core/: Cargo.toml
crates/forge-core/src/: lib.rs
crates/forge-core/src/traits/: alloc_fault_policy.rs  allocator.rs  freelist_protection.rs  mod.rs  os_backed.rs
crates/forge-core/tests/: no_std_compile.rs
crates/forge-fuzz/: Cargo.toml  README.md
crates/forge-fuzz/fuzz_targets/: fuzz_bump_arena.rs  fuzz_slab.rs  fuzz_with_fallback.rs
crates/forge-hardening/: Cargo.toml
crates/forge-hardening/src/: cache_jitter.rs  canary.rs  faulty.rs  guard_page.rs  huge_page.rs  lib.rs  numa.rs  poison.rs  quarantine.rs  split_metadata.rs  statistics.rs  watermark.rs
crates/forge-layout/: Cargo.toml
crates/forge-layout/src/: bump.rs  extendable_slab.rs  fallback.rs  generational.rs  lib.rs  shared_bump.rs  size_classed.rs  slab.rs  slab_owner.rs  stack_alloc.rs
crates/forge-layout/tests/: loom_concurrency.rs  no_std_compile.rs  proptest_correctness.rs
docs/: APPLICATION_RECIPES.md  ARCHITECTURE.md  COMPATIBILITY_MATRIX.md  COMPOSITION_RECIPES.md  C_API.md  PERFORMANCE_TRADEOFFS.md  composable_allocator_spec.md
