[package]
name        = "forge-alloc-core"
version     = "0.2.2"
description = "Core trait contracts (Allocator/Deallocator/OsBacked/FixedRange/FreelistProtection) and NonZeroLayout for the forge-alloc family"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
keywords    = ["allocator", "memory", "no-std", "embedded", "traits"]
categories  = ["memory-management", "no-std"]

# docs.rs builds default features only by default; the SipHash MAC and PAC
# stub surfaces are feature-gated. Build the full API. CI already verifies
# `cargo doc --all-features` is warning-clean.
[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]
std     = []
# Enables the SipHash-1-3 keyed MAC (`SipHashMAC`) for slab freelist integrity.
# Pulls in `subtle` for constant-time MAC compare in `SipHashMAC::verify`.
siphasher = ["dep:siphasher", "dep:subtle"]
# ARM PAC (`PacMAC`) hardware-backed freelist MAC. The instruction-level
# body is not yet implemented; the real implementation is reserved for a
# future release. Until then use `pac-stub` to compile against the future
# API surface.
pac       = []
# Exposes the PacMAC stub type so code can type-check against the future
# API. The stub's `sign`/`verify` methods panic at runtime with an
# explicit "not yet implemented" message — never enable in production.
# Decoupled from `pac` to keep accidental release builds from picking up
# a panicking codepath.
pac-stub  = []

[dependencies]
allocator-api2 = { version = "0.2", default-features = false }
siphasher      = { version = "1.0", default-features = false, optional = true }
# Used by `SipHashMAC::verify` for constant-time MAC comparison. Activated
# by the `siphasher` feature alongside the hash itself — the dep only
# costs build time when SipHash is in use.
subtle         = { version = "2.5", default-features = false, optional = true }

[dev-dependencies]
proptest = "1"

[lib]
doctest = true

[lints]
workspace = true
