[package]
name        = "forge-alloc"
version     = "0.3.7"
description = "Composable memory allocator primitives — pay-for-what-you-use security hardening with zero-cost type-level composition"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
readme      = "README.md"
keywords    = ["allocator", "memory", "no-std", "embedded", "security"]
categories  = ["memory-management", "no-std"]

# docs.rs builds default features only by default; several compositions
# (SipHash MAC, PAC stub) live behind feature gates. Build the full API.
# CI already verifies `cargo doc --all-features` is warning-clean.
[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]
std       = ["forge-alloc-core/std"]
# Enables the SipHash-1-3 keyed MAC (`SipHashMAC`) for slab freelist integrity.
siphasher = ["forge-alloc-core/siphasher"]
# ARM PAC (`PacMAC`) keyed freelist MAC — real implementation reserved for a
# future release; see `forge-alloc-core`.
pac       = ["forge-alloc-core/pac"]
# Compile against the PacMAC stub (panics at runtime — never use in production).
pac-stub  = ["forge-alloc-core/pac-stub"]
# Reserved, currently no-op (future ARM MTE / x86 MPK hardware tagging).
mte       = []
mpk       = []

[dependencies]
forge-alloc-core = { version = "0.2.3", path = "../forge-alloc-core", default-features = false }
allocator-api2   = { version = "0.2", default-features = false, features = ["alloc"] }
# Constant-time compare for canary / MAC verification.
subtle           = { version = "2.5", default-features = false }

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2", default-features = false }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_SystemInformation",
] }

[dev-dependencies]
proptest = "1"

# Loom permutation-testing concurrency model checker — compiled in only
# under `RUSTFLAGS=--cfg loom` for the `loom_concurrency` integration test.
[target.'cfg(loom)'.dev-dependencies]
loom = "0.7"

[lib]
doctest = true

[lints]
workspace = true
