[package]
name        = "forge-fuzz"
version     = "0.0.0"
publish     = false
description = "cargo-fuzz targets for the forge-alloc family — nightly only"
edition     = "2021"
rust-version = "1.70"
license     = "MIT OR Apache-2.0"

[package.metadata]
cargo-fuzz = true

[dependencies]
forge-alloc   = { path = "../forge-alloc" }
libfuzzer-sys = "0.4"
arbitrary  = { version = "1", features = ["derive"] }

[[bin]]
name              = "fuzz_bump_arena"
path              = "fuzz_targets/fuzz_bump_arena.rs"
test              = false
doc               = false
bench             = false

[[bin]]
name              = "fuzz_slab"
path              = "fuzz_targets/fuzz_slab.rs"
test              = false
doc               = false
bench             = false

[[bin]]
name              = "fuzz_with_fallback"
path              = "fuzz_targets/fuzz_with_fallback.rs"
test              = false
doc               = false
bench             = false
