[package]
name        = "forge-hardening"
version     = "0.1.0"
description = "Layer 3 hardening wrappers (Canary, PoisonOnFree, Statistics, Watermark) for the forge-alloc family"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
keywords    = ["allocator", "security", "hardening", "no-std"]
categories  = ["memory-management", "no-std"]

[features]
default = ["std"]
std     = ["forge-core/std", "dep:forge-backing", "forge-backing/std"]
# (Previously: a `stats` feature was declared as "always-on stats counters
# in release builds". It was never gated on anywhere in the source — the
# real opt-in is wrapping with `Statistics<I>`, which costs zero for any
# unwrapped allocator. The feature was removed as a no-op rather than left
# as misleading dead config; see lux task 871f6c.)

[dependencies]
forge-core    = { version = "0.1.0", path = "../forge-core", default-features = false }
# forge-backing is required (not dev-only) because SplitMetadata holds an
# MmapBacked metadata region by value. Std-feature gated so no_std builds
# of forge-hardening still skip the std-dependent surface cleanly.
forge-backing = { version = "0.1.0", path = "../forge-backing", default-features = false, optional = true }
# Constant-time compare for canary verification — see Canary::verify.
subtle     = { version = "2.5", default-features = false }

# Used only by the `numa` module on Linux for the `mbind` and `getcpu`
# syscalls. forge-backing already depends on libc but we keep an
# independent target-cfg dep here so forge-hardening's `numa` module isn't
# gated on the forge-backing build.
[target.'cfg(target_os = "linux")'.dependencies]
libc = { version = "0.2", default-features = false }

[dev-dependencies]
forge-layout  = { version = "0.1.0", path = "../forge-layout" }

[lib]
doctest = true

[lints]
workspace = true
