[package]
name        = "forge-layout"
version     = "0.1.0"
description = "Layer 2 layout primitives (BumpArena, SharedBumpArena, Slab, WithFallback) for the forge-alloc family"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
keywords    = ["allocator", "memory", "arena", "slab", "no-std"]
categories  = ["memory-management", "no-std"]

[features]
default = ["std"]
std       = ["forge-core/std", "forge-backing/std", "dep:forge-backing"]
siphasher = ["forge-core/siphasher"]
pac       = ["forge-core/pac"]

[dependencies]
forge-core    = { version = "0.1.0", path = "../forge-core",    default-features = false }
# forge-backing is required when `std` is enabled (for ExtendableSlab's
# MmapBacked-backed segments). Under no_std, only the no-std-friendly
# primitives (BumpArena, Slab, etc.) compile; ExtendableSlab is std-only.
forge-backing = { version = "0.1.0", path = "../forge-backing", default-features = false, optional = true }

[dev-dependencies]
forge-backing = { version = "0.1.0", path = "../forge-backing", features = ["std"] }
proptest   = "1"

# Loom is the permutation-testing concurrency model checker. Compiled in
# only under `RUSTFLAGS=--cfg loom` (and the corresponding gate on the
# `tests/loom_concurrency.rs` integration test); other test runs do not
# pull in loom and pay none of its compile-time or runtime cost.
[target.'cfg(loom)'.dev-dependencies]
loom = "0.7"

[lib]
doctest = true

[lints]
workspace = true
